[package]
name = "bqredis"
version = "0.1.0"
edition = "2021"

[lib]
name = "_bqredis"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-arrow = "0.17"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Redis
redis = { version = "0.26", features = ["tokio-comp"] }

# BigQuery
google-cloud-bigquery = { package = "gcloud-bigquery", version = "1.6" }
google-cloud-googleapis = { package = "gcloud-googleapis", version = "1.3", features = ["bigquery"] }
google-cloud-gax = { package = "gcloud-gax", version = "1.4" }
google-cloud-auth = { package = "gcloud-auth", version = "1.3" }

# Arrow
arrow = { version = "58", features = ["ipc"] }

# Utilities
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
