[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "bqredis._bqredis"
features = ["pyo3/extension-module"]

[project]
name = "bqredis"
version = "0.1.0"
authors = [
  { name="Ali.Ebrahim", email="ali@delfina.com" },
]
description = "A Redis-backed cache for BigQuery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pyarrow >= 18.1.0",
]

[project.optional-dependencies]
dev = [
  "mypy >=1.11.2",
  "pyarrow-stubs >=20.0.0.20250716",
  "pytest >= 8.4.1"
]

[project.urls]
Homepage = "https://github.com/DelfinaCare/bqredis"
Issues = "https://github.com/DelfinaCare/bqredis/issues"
Repository = "https://github.com/DelfinaCare/bqredis.git"

[tool.ruff.lint]
extend-select = ["I"]
